URL parameters are deprecated and replaced by URI parameters